--- a/index.html
+++ b/index.html
@@ -57,10 +57,60 @@
     </nav>
 
     <div class="container">
+        <h1 id="date">Today's Date</h1>
+        <div class="jumbotron">
+            <p>Image thing would go here somewhere.</p>
+            <button id="startBtn" class="btn btn-primary">Start</button>
+        </div>
 
-        <div class="starter-template">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <div id="stats">
+            <div class="row">
+                <div class="col-xs-4">
+                    <strong>Heartbeat:</strong>
+                </div>
+                <div class="col-xs-8">
+                    <div id="heartbeat">
+                        <p>Heartbeat value</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4">
+                    <strong>Body Temperature:</strong>
+                </div>
+                <div class="col-xs-8">
+                    <div id="bodytemp">
+                        <p>Body Temperature Value</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4">
+                    <strong>Rep #:</strong>
+                </div>
+                <div class="col-xs-8">
+                    <div id="repNumber">
+                        <p>5/10</p>
+                    </div>
+                </div>
+            </div>
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="heartbeat">Pain Level:</label>
+                    <select class="form-control">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        <option>6</option>
+                        <option>7</option>
+                        <option>8</option>
+                        <option>9</option>
+                        <option>10</option>
+                    </select>
+                </div>
+            </form>
         </div>
 
     </div><!-- /.container -->
