--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
     </nav>
 
     <div class="container">
-        <h1 id="date">Today's Date</h1>
+        <h1 class="date">Today's Date</h1>
         <div class="jumbotron">
             <p>Image thing would go here somewhere.</p>
             <button id="startBtn" class="btn btn-primary">Start</button>
         </div>
 
-        <div id="stats">
+        <div class="stats">
             <div class="row">
                 <div class="col-xs-4">
                     <strong>Heartbeat:</strong>
                 </div>
                 <div class="col-xs-8">
-                    <div id="heartbeat">
+                    <div class="heartbeat">
                         <p>Heartbeat value</p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                     <strong>Body Temperature:</strong>
                 </div>
                 <div class="col-xs-8">
-                    <div id="bodytemp">
+                    <div class="bodytemp">
                         <p>Body Temperature Value</p>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                     <strong>Rep #:</strong>
                 </div>
                 <div class="col-xs-8">
-                    <div id="repNumber">
+                    <div class="repNumber">
                         <p>5/10</p>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
             <form class="form-inline">
                 <div class="form-group">
                     <label for="heartbeat">Pain Level:</label>
-                    <select class="form-control">
+                    <select class="form-control painLevel">
                         <option>1</option>
                         <option>2</option>
                         <option>3</option>
