--- a/index.html
+++ b/index.html
@@ -29,6 +29,28 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <style>
+        @import url('//netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css');
+
+        #myCarousel {
+            margin-top: 40px;
+        }
+
+        .carousel-linked-nav,
+        .carousel-linked-projects,
+        .item img {
+            display: block;
+            margin: 0 auto;
+        }
+
+        .carousel-linked-nav,
+        .carousel-linked-projects {
+            width: 200px;
+            margin-bottom: 20px;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -59,59 +81,119 @@
     <div class="container">
         <h1 class="date">Today's Date</h1>
         <div class="jumbotron">
-            <p>Image thing would go here somewhere.</p>
-            <button id="startBtn" class="btn btn-primary">Start</button>
+        <div id="allSlides" style="display:none;">
+            <div class="item" data-project='1'>
+                <img src="http://placehold.it/300x200/888&text=Item 1 Project 1" />
+            </div>
+            <div class="item" data-project='1'>
+                <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 1" />
+            </div>
+            <div class="item" data-project='1'>
+                <img src="http://placehold.it/300x200/444&text=Item 3 Project 1" />
+            </div>
+            <div class="item" data-project='2'>
+                <img src="http://placehold.it/300x200/888&text=Item 1 Project 2" />
+            </div>
+            <div class="item" data-project='2'>
+                <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 2" />
+            </div>
+            <div class="item" data-project='2'>
+                <img src="http://placehold.it/300x200/444&text=Item 3 Project 2" />
+            </div>
+            <div class="item" data-project='3'>
+                <img src="http://placehold.it/300x200/888&text=Item 1 Project 3" />
+            </div>
+            <div class="item" data-project='3'>
+                <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 3" />
+            </div>
+            <div class="item" data-project='3'>
+                <img src="http://placehold.it/300x200/444&text=Item 3 Project 3" />
+            </div>
         </div>
 
-        <div class="stats">
-            <div class="row">
-                <div class="col-xs-4">
-                    <strong>Heartbeat:</strong>
+        <ol class="carousel-linked-projects pagination">
+            <li class="active"><a href="#1" data-project='1'>Foot</a></li>
+            <li><a href="#2" data-project='2'>Leg</a></li>
+            <li><a href="#3" data-project='3'>Shoulder</a></li>
+        </ol>
+
+        <div id="myCarousel" class="carousel slide">
+            <!-- Carousel items -->
+            <div class="carousel-inner">
+                <div class="active item" data-project='1'>
+                    <img src="http://placehold.it/300x200/888&text=Item 1 Project 1" />
                 </div>
-                <div class="col-xs-8">
-                    <div class="heartbeat">
-                        <p>Heartbeat value</p>
-                    </div>
+                <div class="item" data-project='1'>
+                    <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 1" />
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-4">
-                    <strong>Body Temperature:</strong>
-                </div>
-                <div class="col-xs-8">
-                    <div class="bodytemp">
-                        <p>Body Temperature Value</p>
-                    </div>
+                <div class="item" data-project='1'>
+                    <img src="http://placehold.it/300x200/444&text=Item 3 Project 1" />
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xs-4">
-                    <strong>Rep #:</strong>
-                </div>
-                <div class="col-xs-8">
-                    <div class="repNumber">
-                        <p>5/10</p>
-                    </div>
-                </div>
-            </div>
-            <form class="form-inline">
-                <div class="form-group">
-                    <label for="heartbeat">Pain Level:</label>
-                    <select class="form-control painLevel">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        <option>6</option>
-                        <option>7</option>
-                        <option>8</option>
-                        <option>9</option>
-                        <option>10</option>
-                    </select>
-                </div>
-            </form>
+            <!-- Carousel nav -->
+            <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+            <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
         </div>
+
+        <!-- LINKED NAV -->
+        <!--<ol class="carousel-linked-nav pagination">
+            <li class="active"><a href="#1">1</a></li>
+            <li><a href="#2">2</a></li>
+            <li><a href="#3">3</a></li>
+        </ol>-->
+
+        <!--<button id="startBtn" class="btn btn-primary">Start</button>-->
+    </div>
+    </div>
+    <div class="stats">
+        <div class="row">
+            <div class="col-xs-4">
+                <strong>Heartbeat:</strong>
+            </div>
+            <div class="col-xs-8">
+                <div class="heartbeat">
+                    <p>Heartbeat value</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4">
+                <strong>Body Temperature:</strong>
+            </div>
+            <div class="col-xs-8">
+                <div class="bodytemp">
+                    <p>Body Temperature Value</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4">
+                <strong>Rep #:</strong>
+            </div>
+            <div class="col-xs-8">
+                <div class="repNumber">
+                    <p>5/10</p>
+                </div>
+            </div>
+        </div>
+        <form class="form-inline">
+            <div class="form-group">
+                <label for="heartbeat">Pain Level:</label>
+                <select class="form-control painLevel">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                </select>
+            </div>
+        </form>
+    </div>
 
     </div><!-- /.container -->
     <!-- Bootstrap core JavaScript
@@ -122,5 +204,76 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
+    <script>
+        var myCarousel = $('#myCarousel')
+, carouselLinkedNav = $('.carousel-linked-nav')
+, carouselLinkedProjects = $('.carousel-linked-projects')
+, allSlides = $('#allSlides').find('div.item')
+        // invoke the carousel
+        $('#myCarousel').carousel({
+            interval: 3000
+        });
+
+        /* SLIDE ON CLICK */
+
+        carouselLinkedNav.find('li > a').click(function () {
+            var $this = $(this)
+            // grab href, remove pound sign, convert to number
+              , item = $this.attr('href').substring(1) | 0;
+
+            // slide to number -1 (account for zero indexing)
+            $('#myCarousel').carousel(item - 1);
+
+            // remove current active class
+            carouselLinkedNav.find('.active').removeClass('active');
+
+            // add active class to just clicked on item
+            $this.closest('li').addClass('active');
+
+            // don't follow the link
+            return false;
+        });
+
+        carouselLinkedProjects.find(' li > a').click(function () {
+            carouselLinkedProjects.find('li').removeClass('active')
+            $(this).closest('li').addClass('active')
+
+            var currentProject = $(this).data('project')
+
+            myCarousel.find('.item').remove()
+            $slides = allSlides.filter(function () {
+                return $(this).data('project') == currentProject
+            })
+
+            $slides.eq(0).addClass('active')
+
+            console.log(this, currentProject, $slides)
+
+            myCarousel.find('.carousel-inner').append($slides)
+
+            myCarousel.carousel("pause").removeData().carousel(0)
+
+            return false
+        });
+        /* AUTOPLAY NAV HIGHLIGHT */
+
+        // bind 'slid' function
+        myCarousel.bind('slid', function () {
+
+            // remove active class
+            carouselLinkedNav.find('.active').removeClass('active');
+
+            // get index of currently active item
+            var idx = myCarousel.find('item.active').index();
+
+            // select currently active item and add active class
+            $('.carousel-linked-nav li:eq(' + idx + ')').addClass('active');
+
+        });
+    </script>
+
+
+
 </body>
 </html>
