Added images to carusel

--- a/index.html
+++ b/index.html
@@ -83,37 +83,37 @@
         <div class="jumbotron">
         <div id="allSlides" style="display:none;">
             <div class="item" data-project='1'>
-                <img src="http://placehold.it/300x200/888&text=Item 1 Project 1" />
+                <img src="ExercisePics/Foot/Exercise1.png" />
             </div>
             <div class="item" data-project='1'>
-                <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 1" />
+                <img src="ExercisePics/Foot/Exercise2.png" />
             </div>
             <div class="item" data-project='1'>
-                <img src="http://placehold.it/300x200/444&text=Item 3 Project 1" />
+                <img src="ExercisePics/Foot/Exercise3.png" />
             </div>
             <div class="item" data-project='2'>
-                <img src="http://placehold.it/300x200/888&text=Item 1 Project 2" />
+                <img src="ExercisePics/Knee/Exercise1.png" />
             </div>
             <div class="item" data-project='2'>
-                <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 2" />
+                <img src="ExercisePics/Knee/Exercise2.png" />
             </div>
             <div class="item" data-project='2'>
-                <img src="http://placehold.it/300x200/444&text=Item 3 Project 2" />
+                <img src="ExercisePics/Knee/Exercise3.png" />
             </div>
             <div class="item" data-project='3'>
-                <img src="http://placehold.it/300x200/888&text=Item 1 Project 3" />
+                <img src="ExercisePics/Shoulder/Exercise1.png" />
             </div>
             <div class="item" data-project='3'>
-                <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 3" />
+                <img src="ExercisePics/Shoulder/Exercise2.png" />
             </div>
             <div class="item" data-project='3'>
-                <img src="http://placehold.it/300x200/444&text=Item 3 Project 3" />
+                <img src="ExercisePics/Shoulder/Exercise3.png" />
             </div>
         </div>
 
         <ol class="carousel-linked-projects pagination">
             <li class="active"><a href="#1" data-project='1'>Foot</a></li>
-            <li><a href="#2" data-project='2'>Leg</a></li>
+            <li><a href="#2" data-project='2'>Knee</a></li>
             <li><a href="#3" data-project='3'>Shoulder</a></li>
         </ol>
 
@@ -121,7 +121,7 @@
             <!-- Carousel items -->
             <div class="carousel-inner">
                 <div class="active item" data-project='1'>
-                    <img src="http://placehold.it/300x200/888&text=Item 1 Project 1" />
+                    <img src="ExercisePics/Foot/Exercise1.png" />
                 </div>
                 <div class="item" data-project='1'>
                     <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 1" />
