--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <ol class="carousel-linked-projects pagination">
-            <li class="active"><a href="#1" data-project='1'>Foot</a></li>
+            <li><a href="#1" data-project='1'>Foot</a></li>
             <li><a href="#2" data-project='2'>Knee</a></li>
             <li><a href="#3" data-project='3'>Shoulder</a></li>
         </ol>
@@ -121,13 +121,13 @@
             <!-- Carousel items -->
             <div class="carousel-inner">
                 <div class="active item" data-project='1'>
-                    <img src="ExercisePics/Foot/Exercise1.png" />
+                    <img src="ExercisePics/Descriptions/Exercise1.png" />
                 </div>
                 <div class="item" data-project='1'>
-                    <img src="http://placehold.it/300x200/aaa&text=Item 2 Project 1" />
+                    <img src="ExercisePics/Descriptions/Exercise2.png" />
                 </div>
                 <div class="item" data-project='1'>
-                    <img src="http://placehold.it/300x200/444&text=Item 3 Project 1" />
+                    <img src="ExercisePics/Descriptions/Exercise3.png" />
                 </div>
             </div>
             <!-- Carousel nav -->
